--- a/index.scss
+++ b/index.scss
@@ -4,11 +4,16 @@ $complimentary: #4ad3d3;
 $textColor: rgba(255, 255, 255, 0.7);
 $headerHeight: max(10vh, 30px);
 
+//font sizes
+$h1: max(15vw, 300%);
+$h2: max(15vw * 3 / 5, 200%);
+
+
 * {
   margin: 0;
   padding: 0;
   font-family: 'Times New Roman', serif;
-  color: cornflowerblue;
+  color: $textColor;
 }
 
 body {
@@ -46,7 +51,7 @@ body {
     $jobHeight: max(15vw * 3 / 5, 200%);
     display: grid;
     grid-template-columns: 45% min(10px, 1vh, 1vw) 54%;
-    padding: 0 0 max(40px, 5vh) 0;
+    padding: 0 0 max(40px, 5vw) 0;
     //opacity: 0;
     //visibility: hidden;
 
@@ -56,18 +61,28 @@ body {
       font-family: 'Outfit', sans-serif;
       padding: 0 5% 0 2.5%;
       line-height: 110%;
-      user-select: none;
+      user-select: none
 
     }
 
     .titleName {
 
+      @keyframes animIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 100%;
+        }
+
+      }
       text-align: right;
       font-size: $nameHeight;
       font-weight: 600;
       user-select: none;
       line-height: 90%;
-      display: none;
+      opacity: 0;
+      animation: 2s linear 0.1s 1 animIn forwards;
 
       @keyframes inAndOut {
         0% {
@@ -156,6 +171,41 @@ body {
     transform: scaleX(0);
     animation: 1s ease-in-out 0.2s 1 titleAnim1 forwards;
   }
+}
+
+
+.project {
+
+  &::first-letter {
+    color: $complimentary;
+  }
+  .projectTitle {
+    font-family: Outfit, sans-serif;
+    text-align: center;
+    margin: 3vh 0 3vh 0;
+    font-size: $h2;
+    font-weight: bold;
+  }
+
+  .projectGrid {
+
+    display: grid;
+    grid-template-columns: 100%;
+    //grid-template-rows: 100% 100% 100%;
+    grid-gap: 1vh;
+    justify-items: center;
+  }
+
+  .projectCard {
+    width: 90%;
+    height: 100px;
+    display: grid;
+    grid-template-columns: 70% 1% 29%;
+    grid-template-rows: 100%;
+    border-radius: 10px;
+    background-color: $highlightColor1;
+  }
+
 }
 
 
