--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Times New Roman", serif;
-  color: rgba(255, 255, 255, 0.7);
+  color: #bbbcbf;
 }
 
 body {
@@ -19,8 +19,13 @@ body {
   z-index: 1;
   display: grid;
   padding: 0 2% 0 2%;
-  grid-template-columns: 66% 10% 10% 10%;
+  grid-template-columns: 80% 5% 5% 5%;
   transition-duration: 0.5s;
+}
+@media only screen and (max-width: 500px) {
+  .header {
+    grid-template-columns: 66% 10% 10% 10%;
+  }
 }
 .header .headerItem {
   font-family: Outfit, sans-serif;
@@ -33,6 +38,7 @@ body {
 .header .logo {
   max-width: 60%;
   max-height: 60%;
+  filter: invert(82%) sepia(5%) saturate(113%) hue-rotate(187deg) brightness(94%) contrast(84%);
 }
 @keyframes rotateHeader {
   0% {
@@ -68,7 +74,7 @@ body {
   padding: 10vw 0 max(40px, 5vw) 0;
 }
 .titleSpace .titleGrid * {
-  color: rgba(255, 255, 255, 0.7);
+  color: #bbbcbf;
   font-family: "Outfit", sans-serif;
   padding: 0 5% 0 2.5%;
   line-height: 110%;
@@ -113,7 +119,7 @@ body {
   transform: scale(1.05);
 }
 .titleSpace .titleGrid .titleSeparator {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #bbbcbf;
   transform: scaleY(0);
   animation: 1s ease-in-out 0.2s 1 titleAnim forwards;
 }
@@ -146,7 +152,7 @@ body {
 }
 .titleSpace .titleHorizontalBar {
   height: min(10px, 1vh, 1vw);
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #bbbcbf;
   margin: 0 10% 0 10%;
   transform: scaleX(0);
   animation: 1s ease-in-out 0.2s 1 titleAnim1 forwards;
