--- a/index.scss
+++ b/index.scss
@@ -3,7 +3,7 @@ $highlight1: #323232;
 $highlight2: #1a1a1a;
 $highlight3: 0;
 $complimentary: #4ad3d3;
-$textColor: rgba(255, 255, 255, 0.7);
+$textColor: rgb(187, 188, 191);
 $headerHeight: max(10vh, 30px);
 
 //font sizes
@@ -34,7 +34,11 @@ body {
   z-index: 1;
   display: grid;
   padding: 0 2% 0 2%;
-  grid-template-columns: 66% 10% 10% 10%;
+  grid-template-columns: 80% 5% 5% 5%;
+
+  @media only screen and (max-width: 500px) {
+    grid-template-columns: 66% 10% 10% 10%;
+  }
   transition-duration: 0.5s;
 
   .headerItem {
@@ -55,6 +59,7 @@ body {
     //height: auto;
     max-width: 60%;
     max-height: 60%;
+    filter: invert(82%) sepia(5%) saturate(113%) hue-rotate(187deg) brightness(94%) contrast(84%);
   }
 
   @keyframes rotateHeader {
