--- a/index.scss
+++ b/index.scss
@@ -11,18 +11,30 @@ $h1: max(15vw, 300%);
 $h2: max(15vw * 3 / 5, 200%);
 $h3: max(15vw * 2 / 5, 200%);
 $h4: max(15vw * 1 / 5, 150%);
+$h5: max(15vw * 1 / 6, 140%);
 
-* {
+*{
   margin: 0;
   padding: 0;
-  font-family: 'Times New Roman', serif;
+  font-family: 'Outfit', serif;
+//font-size: 2vmax;
   color: $textColor;
+
 }
 
 body {
   background-color: $bgcolor;
   margin: 0;
-  height: 200vh;
+
+  .cardTitle {
+    font-size: $h3;
+  }
+
+  .cardSubtitle {
+    font-size: $h5;
+    font-style: italic;
+  }
+
 }
 
 .header {
@@ -51,7 +63,6 @@ body {
     cursor: pointer;
 
 
-
   }
 
   .logo {
@@ -63,12 +74,18 @@ body {
   }
 
   @keyframes rotateHeader {
-    0% {transform: rotate(0)}
-    100%{transform: rotate(360deg)}
+    0% {
+      transform: rotate(0)
+    }
+    100% {
+      transform: rotate(360deg)
+    }
   }
+
   #headerName {
     margin: auto auto auto 0;
     font-size: 5vmax;
+
     &::first-letter {
       color: $complimentary;
     }
@@ -224,6 +241,7 @@ body {
   &::first-letter {
     color: $complimentary;
   }
+
   .projectTitle {
     font-family: Outfit, sans-serif;
     text-align: center;
@@ -231,6 +249,7 @@ body {
     font-size: $h2;
     font-weight: bold;
   }
+
 
   .projectGrid {
 
@@ -241,14 +260,34 @@ body {
     justify-items: center;
   }
 
+  .projectCardImgDescGrid {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+
+  .projectCardImg {
+    object-fit: fill;
+    align-self: center;
+    justify-self: center;
+  }
+
+  .projectCardDesc {
+    padding: 2% 2% 2% 0;
+    size: $h5;
+  }
+
   .projectCard {
     width: 90%;
-    height: 100px;
+    //height: 100px;
+    padding: 1vmax;
     display: grid;
-    grid-template-columns: 70% 1% 29%;
-    grid-template-rows: 100%;
     border-radius: 10px;
     background-color: $highlight2;
+
+
+    .projectCardTitle {
+
+    }
   }
 
 }
